--- a/tasks/Linux.yml
+++ b/tasks/Linux.yml
@@ -1,3 +1,22 @@
 ---
 # tasks file for nomad(On Linux)
-
+# Since Ansible 2.0, 'src' parameter of 'unarchive' module accepts external URL(ex. http://example.com/file.zip).
+# But this role doesn't use this feature because zip file is always downloaded even if same file already exits in local.
+# http://docs.ansible.com/ansible/unarchive_module.html
+- name: Download Nomad archive
+  get_url:
+    url: "{{ nomad_download_url }}"
+    checksum: "sha256:{{ nomad_sha256 }}"
+    dest: "{{ nomad_download_tmppath }}"
+  register: dl_result
+- name: Unarchive Nomad
+  unarchive:
+    src: "{{ nomad_download_tmppath }}"
+    dest: "{{ nomad_bin_dir }}"
+    copy: no
+  become: yes
+  when: dl_result.changed
+- name: Ensure execute bit of Nomad binary
+  file:
+    path: "{{ nomad_bin_dir }}/nomad"
+    mode: 'a+x'
