Change names of role variables related to nomad owner/group.
They own not only configs, but also othter components(log, script, and
so on)

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ matrix:
         - TARGET=localhost
         # Workaround for OSX.
         - PYTHONPATH="/Library/Python/2.7/site-packages:$PYTHONPATH"
-        - EXTRA_VARS="nomad_config_src_dir='../tests/nomad.d/' nomad_config_remote_dir='/Users/travis/nomad.d' nomad_config_owner='travis' nomad_config_group='staff'"
+        - EXTRA_VARS="nomad_config_src_dir='../tests/nomad.d/' nomad_config_remote_dir='/Users/travis/nomad.d' nomad_owner='travis' nomad_group='staff'"
     - os: linux
       dist: trusty
       language: python
