--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,15 +6,15 @@
   - name: Ensure nomad_config_remote_dir exists
     file:
       path: "{{ nomad_config_remote_dir }}"
-      owner: "{{ nomad_config_owner }}"
-      group: "{{ nomad_config_group }}"
+      owner: "{{ nomad_owner }}"
+      group: "{{ nomad_group }}"
       state: 'directory'
   - name: Copy Nomad config files from nomad_config_src_dir to nomad_config_remote_dir
     copy:
       src: "{{ nomad_config_src_dir }}"
       dest: "{{ nomad_config_remote_dir }}"
-      owner: "{{ nomad_config_owner }}"
-      group: "{{ nomad_config_group }}"
+      owner: "{{ nomad_owner }}"
+      group: "{{ nomad_group }}"
   - name: Ensure Nomad config files are readable
     file:
       path: "{{ nomad_config_remote_dir }}"
