--- a/tasks/Linux.yml
+++ b/tasks/Linux.yml
@@ -20,3 +20,15 @@
   file:
     path: "{{ nomad_bin_dir }}/nomad"
     mode: 'a+x'
+- block:
+  - name: Ensure nomad_group exists
+    group:
+      name: "{{ nomad_group }}"
+      system: yes
+  - name: Ensure nomad_user exists and belongs to nomad_group
+    user:
+      name: "{{ nomad_owner }}"
+      group: "{{ nomad_group }}"
+      system: yes
+  become: yes
+
