--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,23 @@ matrix:
         # Ref. https://github.com/travis-ci/travis-ci/issues/5554
         - rvm use ruby-2.2.1
         - bundle install
+      script:
+        # Basic role syntax check
+        - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+        - ansible-playbook tests/test.yml -i tests/inventory -l ${TARGET} --extra-vars="${EXTRA_VARS}" -vvvv
+        - nohup nomad agent -dev -config=/Users/travis/nomad.d &
+        # For debug
+        - ps -ef | grep nomad
+        - bundle exec rake spec SPEC_TARGET=${TARGET}
+        # For debug
+        - ps -ef | grep consul
       env:
         - TARGET=localhost
         # Workaround for OSX.
         - PYTHONPATH="/Library/Python/2.7/site-packages:$PYTHONPATH"
-        - EXTRA_VARS="nomad_config_src_dir='../tests/nomad.d/' nomad_config_remote_dir='/Users/travis/nomad.d' nomad_owner='travis' nomad_group='staff'"
+        - >+
+          EXTRA_VARS="nomad_config_src_dir='../tests/nomad.d/' nomad_config_remote_dir='/Users/travis/nomad.d'
+          nomad_owner='travis' nomad_group='staff'"
     - os: linux
       dist: trusty
       language: python
