--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ matrix:
         # Basic role syntax check
         - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
         - ansible-playbook tests/test.yml -i tests/inventory -l ${TARGET} --extra-vars="${EXTRA_VARS}" -vvvv
-        - nohup nomad agent -dev &
+        - export IP=`ifconfig en0 | awk '/inet / {printf $2}'`
+        - nohup nomad agent -dev -bind=${IP} &
         # For debug
         - ps -ef | grep nomad
         - bundle exec rake spec SPEC_TARGET=${TARGET}
