--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ matrix:
         - export IP=`ifconfig en0 | awk '/inet / {printf $2}'`
         - nohup nomad agent -dev -bind=${IP} &
         # For debug
+        - cat nohup.out
         - ps -ef | grep nomad
         - bundle exec rake spec SPEC_TARGET=${TARGET}
         # For debug
