--- a/tests/setup_clusterspec.yml
+++ b/tests/setup_clusterspec.yml
@@ -3,3 +3,18 @@
   remote_user: root
   roles:
     - { role: FGtatsuro.vagrant }
+- hosts: cluster
+  roles:
+    - role: FGtatsuro.docker-toolbox
+      docker_install_machine: no
+      docker_install_compose: no
+      docker_group_append_users:
+        - 'vagrant'
+        - 'nomad'
+  tasks:
+    - name: Ensure docker daemon runs
+      service:
+        name: docker
+        state: started
+        enabled: yes
+      become: yes
