--- a/tests/run_nomadjob.yml
+++ b/tests/run_nomadjob.yml
@@ -10,9 +10,9 @@
       command: 'nomad init'
       when: not stat_example_nomad.stat.exists
     - name: Check whether example job is submitted.
-      command: 'nomad status -address=http://192.168.50.4:4646'
+      command: 'nomad status'
       register: job_status_nomad
       changed_when: no
     - name: Submit example job
-      command: 'nomad run -address=http://192.168.50.4:4646 example.nomad'
+      command: 'nomad run example.nomad'
       when: "'example' not in job_status_nomad.stdout"
