--- a/tests/setup_clusterspec.yml
+++ b/tests/setup_clusterspec.yml
@@ -23,7 +23,7 @@
       changed_when: no
       ignore_errors: yes
     - name: Run nomad daemon on server
-      shell: "su -l nomad -c '/opt/nomad/daemons.py start -- -server -bootstrap-expect=1 -bind=192.168.50.4 -data-dir=/tmp/nomad -dc=dc1'"
+      shell: "su -l nomad -c '/opt/nomad/daemons.py start -- -server -bootstrap-expect=1 -config=/etc/nomad.d'"
       args:
         warn: no
       when: check_nomad_run_server.rc != 0
@@ -36,7 +36,7 @@
       changed_when: no
       ignore_errors: yes
     - name: Run nomad daemon on client
-      shell: "su -l nomad -c '/opt/nomad/daemons.py start -- -client -join=192.168.50.4 -bind=192.168.50.5 -data-dir=/tmp/nomad -dc=dc1 -config=/etc/nomad.d'"
+      shell: "su -l nomad -c '/opt/nomad/daemons.py start -- -client -join=192.168.50.4 -config=/etc/nomad.d'"
       args:
         warn: no
       when: check_nomad_run_client.rc != 0
