--- a/tests/setup_clusterspec.yml
+++ b/tests/setup_clusterspec.yml
@@ -23,7 +23,7 @@
       changed_when: no
       ignore_errors: yes
     - name: Run nomad daemon on server
-      shell: "su -l nomad -c '/opt/nomad/daemons.py start -- -server -bootstrap-expect=1 -config=/etc/nomad.d'"
+      shell: "su -l nomad -c '/opt/nomad/daemons.py start -- -server -config=/etc/nomad.d'"
       args:
         warn: no
       when: check_nomad_run_server.rc != 0
