Add a role variable to set client.servers of Nomad.

--- a/tests/run_cluster.yml
+++ b/tests/run_cluster.yml
@@ -20,7 +20,7 @@
       changed_when: no
       ignore_errors: yes
     - name: Run nomad daemon on client
-      shell: "su -l nomad -c '/opt/nomad/daemons.py start -- -client -join=192.168.50.4'"
+      shell: "su -l nomad -c '/opt/nomad/daemons.py start -- -client'"
       args:
         warn: no
       when: check_nomad_run_client.rc != 0
