Add a role variable to set server.enabled of Nomad.

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ matrix:
         - >+
           EXTRA_VARS="nomad_config_src_dir='../tests/nomad.d/' nomad_config_remote_dir='/Users/travis/nomad.d'
           nomad_owner='travis' nomad_group='staff'
-          nomad_default_config_consul_address='127.0.0.1:8400'"
+          nomad_default_config_consul_address='127.0.0.1:8400' nomad_default_config_server_enabled='false'"
     - os: linux
       dist: trusty
       language: python
